# GSOC_RAG

./: .env.example  .gitignore  pyproject.toml
backend/: requirements-dev.txt  requirements.txt  test_cli.py  test_connector.py
backend/api/: main.py
backend/api/middleware/: error_handler.py  logging.py
backend/api/models/: requests.py  responses.py  websocket_events.py
backend/api/routes/: chat.py  health.py  repos.py  websocket.py
backend/api/utils/: change_detector.py  pipeline_manager.py
backend/connectors/: demo_connector.py  event_transformer.py  github_connector.py  schemas.py
backend/core/: config.py  exceptions.py  github_client.py  logger.py
backend/pipelines/: activity_scoring.py  contributor_analytics.py  pathway_pipeline.py  summary_generator.py  temporal_windows.py  trend_detector.py  velocity_calculator.py
backend/rag/: embeddings.py  indexer.py  prompts.py  query_engine.py  retriever.py
backend/utils/: github_queries.py
demo/: demo_live_system.py
docs/: API_GUIDE.md  WEBSOCKET_GUIDE.md
